New Resume And Coverletter
Updated Resume And Coverletter

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <li><a href="#about">About Me</a></li>
             <li><a href="#services">Skills</a></li>  <!---These are the options they can choose at the top of the screen-->
             <li><a href="#blog">Blog</a></li>
-            <li><a href="SayyedsResume2022 (1).pdf">Resume</a></li> 
+            <li><a href="SayyedResume.pdf">Resume</a></li> 
+            <li><a href="SayyedsCoverLetter.pdf">CoverLetter</a></li>
             <li><a href="#contact">Contact Me</a></li>
         </ul>
         <div class="h-btn">
