--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <!--header-->
     <header>
         <a href="https://github.com/SiTechTech" class="logo">Si <span>Tech</span></a>
-        <div class="bx bx-menu" id="menu-icon"></div>  <!--This Gives the menu icon with the 3 bars-->
+        <div class="bx bx-menu" id="menu-icon"></div>  <!--This Gives the menu icon with the 3 bars.-->
 
         <ul class="navlist">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About Me</a></li>
-            <li><a href="#services">Skills</a></li>  <!---These are the options they can choose at the top of the screen-->
+            <li><a href="#services">Skills</a></li>  <!---These are the options they can choose at the top of the screen.-->
             <li><a href="#blog">Blog</a></li>
             <li><a href="SayyedResume.pdf">Resume</a></li> 
             <li><a href="SayyedsCoverLetter.pdf">CoverLetter</a></li>
