--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="#about">About Me</a></li>
             <li><a href="#services">Skills</a></li>  <!---These are the options they can choose at the top of the screen.-->
             <li><a href="#blog">Blog</a></li>
-            <li><a href="SayyedResume.pdf">Resume</a></li> 
+            <li><a href="Sayyed_Jennings_Resume.pdf">Resume</a></li> 
             <li><a href="SayyedsCoverLetter.pdf">CoverLetter</a></li>
             <li><a href="#contact">Contact Me</a></li>
         </ul>
