--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
         <div class="about-text">
             <h2>About Me</h2>
             <h5>C#, Css, Python, Java, Html, Coder<span></span></h5>
-            <p>My name Is Sayyed I started coding 8 months ago
-                and I haven't stopped since. I'm currently studying C#, Python, HTML, JavaScript, And Css, 
+            <p>My name Is Sayyed, I'm currently studying HTML, JavaScript, Css, Ruby on Rails, Git, Etc,
                 all these languages can help benefit my career In the path to becoming a Software Engineer, 
-                I also dabble In other things like react, Selenium, Pygame, Docker, .Net, And Flask. I am also working towards 
-                earning the Comptia A+ certification.
+                I also dabble In other frameworks such as React, Selenium, Pygame, Docker, .Net, And Flask.
                 I find true enjoyment out of learning and trying new things when It comes to coding.
             </p>
             <a href="#blog" class="btn">Check Out The Blog</a>
@@ -170,7 +168,7 @@
     <section class="blog" id="blog">
             <div class="heading">
                 <!-- <h6>Creative Blog</h6> -->
-                <h2>Some Fun Little Projects Ive Done</h2>
+                <h2>Some Fun Projects Ive Done</h2>
                 <p>Some personal projects I've done<br>check it out</p> 
             </div>
 
