--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
             <a href="#about" class="btn">Read A Little More</a>
 
             <ul class="count">
-                <li><span>7+</span> <br>7 Months Coding</li>
+                <li><span>2+</span> <br>2 years Coding</li>
                 <li><span>30+</span> <br>Projects Completed</li>
-                <li><span>6+</span> <br>6 Years Working On Computer</li> 
+                <li><span>10+</span> <br>10 Years Working On Computer</li> 
             </ul> 
         </div>
 
